# bebot

./: .zshrc  Dockerfile  LICENSE  pyproject.toml  scrapy.cfg
api/: server.py
bebot/: app.py
scrap/: cc.json  items.py  settings.py
scrap/spiders/: codecademy.py  sololearn.py
tests/: test_bebot.py
