[tool.poetry]
name = "scrap"
version = "0.1.0"
description = ""
authors = ["atlasrw <atlasrw@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
Scrapy = "^2.5.0"
uvicorn = "^0.14.0"
fastapi = "^0.66.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = 'api.server:bootstrap'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
